# hyper-audio

./: .env.example  .gitignore  INSTALL.md  README.md  architecture.md  dev_playground.py  dev_playground_config.py  dev_playground_config.yaml  dev_playground_enhanced.py  model_test.py  notes.md  podcast_replace.py  pyproject.toml  remove_music.py  scraper.py  setup_env.sh  transcribe.py  tts.py  tutorial_agent.py  tutorial_chatbot.py  tutorial_memory_chatbot.py  tutorial_vector_store.py
.github/workflows/: ci.yml
data/: console.md  pycharm.md  sample.json  speaker1.txt  speaker2.txt
examples/: multi_stage_config.yaml  test_enhanced_pipeline.py
src/hyper_audio/: __init__.py
src/hyper_audio/config/: __init__.py  settings.py
src/hyper_audio/pipeline/: __init__.py  analytics.py  analytics_simple.py  checkpoint.py  config_manager.py  constants.py  core.py  core_helpers.py  models.py  stage_interface.py
src/hyper_audio/pipeline/stages/: __init__.py  audio_post_processor.py  base.py  diarizer.py  enhanced_separator.py  preprocessor.py  recognizer.py  reconstructor.py  separator.py  sepformer_separator.py  synthesizer.py
src/hyper_audio/utils/: __init__.py  audio_utils.py  logging_utils.py  model_loader.py
tests/: __init__.py  conftest.py  test_analytics.py  test_checkpoint.py  test_core_pipeline.py  test_error_handling.py  test_integration.py  test_models.py  test_performance.py
utils/: environment_test.py  huggingface_login.py  langsmith_start.py  memory_session.py  model_loader.py  open_ai_model_loader.py  travily_start.py
